terraform/aws/waf.tf
locals {
  excluded_bot_control_rules = [
    "CategoryHttpLibrary",       # Blocks OIDC auth flow
    "SignalNonBrowserUserAgent", # Blocks API access
  ]
  excluded_common_rules = [
    "EC2MetaDataSSRF_BODY",          # Rule is blocking IdP OIDC app creation
    "EC2MetaDataSSRF_QUERYARGUMENTS" # Rule is blocking IdP OIDC login
  ]
  rate_limit_all      = 1000
  rate_limit_mutating = 500
}

resource "aws_wafv2_web_acl" "idp" {
  name  = "idp"
  scope = "REGIONAL"

  default_action {
    allow {}
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "idp"
    sampled_requests_enabled   = true
  }

  tags = local.common_tags

  lifecycle {
    ignore_changes = [rule]
  }
}

resource "aws_wafv2_web_acl_rule" "block_large_requests" {
  name        = "BlockLargeRequests"
  priority    = 10
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.invalid_host]

  action {
    block {}
  }

  statement {
    or_statement {
      statement {
        size_constraint_statement {
          field_to_match {
            body {
              oversize_handling = "MATCH"
            }
          }
          comparison_operator = "GT"
          size                = 8192
          text_transformation {
            priority = 0
            type     = "NONE"
          }
        }
      }
      statement {
        size_constraint_statement {
          field_to_match {
            cookies {
              match_pattern {
                all {}
              }
              match_scope       = "ALL"
              oversize_handling = "MATCH"
            }
          }
          comparison_operator = "GT"
          size                = 8192
          text_transformation {
            priority = 0
            type     = "NONE"
          }
        }
      }
      statement {
        size_constraint_statement {
          field_to_match {
            headers {
              match_pattern {
                all {}
              }
              match_scope       = "ALL"
              oversize_handling = "MATCH"
            }
          }
          comparison_operator = "GT"
          size                = 8192
          text_transformation {
            priority = 0
            type     = "NONE"
          }
        }
      }
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "BlockLargeRequests"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "invalid_host" {
  name        = "InvalidHost"
  priority    = 20
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.canada_only_geo_restriction]

  action {
    block {}
  }

  statement {
    not_statement {
      statement {
        byte_match_statement {
          field_to_match {
            single_header {
              name = "host"
            }
          }
          text_transformation {
            priority = 1
            type     = "COMPRESS_WHITE_SPACE"
          }
          text_transformation {
            priority = 2
            type     = "LOWERCASE"
          }
          positional_constraint = "EXACTLY"
          search_string         = var.domain
        }
      }
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "InvalidHost"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "canada_only_geo_restriction" {
  count = var.enable_waf_geo_restriction ? 1 : 0

  name        = "CanadaOnlyGeoRestriction"
  priority    = 30
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.aws_managed_rules_amazon_ip_reputation_list]

  action {
    block {
      custom_response {
        response_code = 403
        response_header {
          name  = "waf-block"
          value = "CanadaOnlyGeoRestriction"
        }
      }
    }
  }

  statement {
    not_statement {
      statement {
        geo_match_statement {
          country_codes = ["CA"]
        }
      }
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "CanadaOnlyGeoRestriction"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "aws_managed_rules_amazon_ip_reputation_list" {
  name        = "AWSManagedRulesAmazonIpReputationList"
  priority    = 40
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.all_request_limit_ip]

  override_action {
    none {}
  }

  statement {
    managed_rule_group_statement {
      name        = "AWSManagedRulesAmazonIpReputationList"
      vendor_name = "AWS"
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "AWSManagedRulesAmazonIpReputationList"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "all_request_limit_ip" {
  name        = "AllRequestLimitIP"
  priority    = 50
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.all_request_limit_ja4]

  action {
    block {}
  }

  statement {
    rate_based_statement {
      limit              = local.rate_limit_all
      aggregate_key_type = "IP"

    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "AllRequestLimit"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "all_request_limit_ja4" {
  name        = "AllRequestLimitJA4"
  priority    = 60
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.mutating_request_limit_ip]

  action {
    block {}
  }

  statement {
    rate_based_statement {
      limit              = local.rate_limit_all
      aggregate_key_type = "CUSTOM_KEYS"

      custom_keys {
        ja4_fingerprint {
          fallback_behavior = "MATCH"
        }
      }
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "AllRequestLimitJA4"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "mutating_request_limit_ip" {
  name        = "MutatingRequestLimitIP"
  priority    = 70
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.mutating_request_limit_ja4]

  action {
    block {}
  }

  statement {
    rate_based_statement {
      limit              = local.rate_limit_mutating
      aggregate_key_type = "IP"
      scope_down_statement {
        regex_match_statement {
          field_to_match {
            method {}
          }
          regex_string = "^(delete|patch|post|put)$"
          text_transformation {
            priority = 1
            type     = "LOWERCASE"
          }
        }
      }
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "MutatingRequestLimitIP"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "mutating_request_limit_ja4" {
  name        = "MutatingRequestLimitJA4"
  priority    = 80
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.aws_managed_rules_known_bad_inputs_rule_set]

  action {
    block {}
  }

  statement {
    rate_based_statement {
      limit              = local.rate_limit_mutating
      aggregate_key_type = "CUSTOM_KEYS"

      custom_keys {
        ja4_fingerprint {
          fallback_behavior = "MATCH"
        }
      }

      scope_down_statement {
        regex_match_statement {
          field_to_match {
            method {}
          }
          regex_string = "^(delete|patch|post|put)$"
          text_transformation {
            priority = 1
            type     = "LOWERCASE"
          }
        }
      }
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "MutatingRequestLimitJA4"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "aws_managed_rules_known_bad_inputs_rule_set" {
  name        = "AWSManagedRulesKnownBadInputsRuleSet"
  priority    = 100
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.aws_managed_rules_linux_rule_set]

  override_action {
    none {}
  }

  statement {
    managed_rule_group_statement {
      name        = "AWSManagedRulesKnownBadInputsRuleSet"
      vendor_name = "AWS"
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "AWSManagedRulesKnownBadInputsRuleSet"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "aws_managed_rules_linux_rule_set" {
  name        = "AWSManagedRulesLinuxRuleSet"
  priority    = 110
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.aws_managed_rules_anti_ddos_rule_set]

  override_action {
    none {}
  }
  statement {
    managed_rule_group_statement {
      name        = "AWSManagedRulesLinuxRuleSet"
      vendor_name = "AWS"
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "AWSManagedRulesLinuxRuleSet"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "aws_managed_rules_common_rule_set" {
  name        = "AWSManagedRulesCommonRuleSet"
  priority    = 120
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.aws_managed_rules_bot_control_rule_set]

  override_action {
    none {}
  }

  statement {
    managed_rule_group_statement {
      name        = "AWSManagedRulesCommonRuleSet"
      vendor_name = "AWS"

      dynamic "rule_action_override" {
        for_each = local.excluded_common_rules
        content {
          name = rule_action_override.value
          action_to_use {
            count {}
          }
        }
      }
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "AWSManagedRulesCommonRuleSet"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "aws_managed_rules_anti_ddos_rule_set" {
  name        = "AWSManagedRulesAntiDDoSRuleSet"
  priority    = 90
  web_acl_arn = aws_wafv2_web_acl.idp.arn
  depends_on  = [aws_wafv2_web_acl_rule.aws_managed_rules_common_rule_set]

  override_action {
    none {}
  }
  statement {
    managed_rule_group_statement {
      name        = "AWSManagedRulesAntiDDoSRuleSet"
      vendor_name = "AWS"

      managed_rule_group_configs {
        aws_managed_rules_anti_ddos_rule_set {
          client_side_action_config {
            challenge {
              sensitivity     = "HIGH"
              usage_of_action = "ENABLED"
              exempt_uri_regular_expression {
                regex_string = "/api/|.(acc|avi|css|gif|jpe?g|js|pdf|png|tiff?|ttf|webm|webp|woff2?)$"
              }
            }
          }
        }
      }
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "AWSManagedRulesAntiDDoSRuleSet"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_rule" "aws_managed_rules_bot_control_rule_set" {
  name        = "BotControl"
  priority    = 130
  web_acl_arn = aws_wafv2_web_acl.idp.arn

  override_action {
    none {}
  }

  statement {
    managed_rule_group_statement {
      name        = "AWSManagedRulesBotControlRuleSet"
      vendor_name = "AWS"
      managed_rule_group_configs {
        aws_managed_rules_bot_control_rule_set {
          inspection_level = "COMMON"
        }
      }

      dynamic "rule_action_override" {
        for_each = local.excluded_bot_control_rules
        content {
          name = rule_action_override.value
          action_to_use {
            count {}
          }
        }
      }
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "BotControl"
    sampled_requests_enabled   = true
  }
}

resource "aws_wafv2_web_acl_association" "idp" {
  resource_arn = aws_lb.idp.arn
  web_acl_arn  = aws_wafv2_web_acl.idp.arn
}

#
# WAF logging
#
resource "aws_wafv2_web_acl_logging_configuration" "idp_waf_logs" {
  log_destination_configs = [aws_kinesis_firehose_delivery_stream.idp_waf_logs.arn]
  resource_arn            = aws_wafv2_web_acl.idp.arn
}

resource "aws_kinesis_firehose_delivery_stream" "idp_waf_logs" {
  name        = "aws-waf-logs-idp"
  destination = "extended_s3"

  server_side_encryption {
    enabled = true
  }

  extended_s3_configuration {
    role_arn           = aws_iam_role.idp_waf_logs.arn
    prefix             = "waf_acl_logs/AWSLogs/${var.account_id}/"
    bucket_arn         = local.cbs_satellite_bucket_arn
    compression_format = "GZIP"
  }
}

#
# WAF logging IAM role
#
resource "aws_iam_role" "idp_waf_logs" {
  name               = "idp-waf-logs"
  assume_role_policy = data.aws_iam_policy_document.idp_waf_logs_assume.json
}

resource "aws_iam_role_policy" "idp_waf_logs" {
  name   = "idp-waf-logs"
  role   = aws_iam_role.idp_waf_logs.id
  policy = data.aws_iam_policy_document.idp_waf_logs.json
}

data "aws_iam_policy_document" "idp_waf_logs_assume" {
  statement {
    actions = ["sts:AssumeRole"]
    principals {
      type        = "Service"
      identifiers = ["firehose.amazonaws.com"]
    }
  }
}

data "aws_iam_policy_document" "idp_waf_logs" {
  statement {
    effect = "Allow"
    actions = [
      "s3:AbortMultipartUpload",
      "s3:GetBucketLocation",
      "s3:GetObject",
      "s3:ListBucket",
      "s3:ListBucketMultipartUploads",
      "s3:PutObject"
    ]
    resources = [
      local.cbs_satellite_bucket_arn,
      "${local.cbs_satellite_bucket_arn}/*"
    ]
  }

  statement {
    effect = "Allow"
    actions = [
      "iam:CreateServiceLinkedRole"
    ]
    resources = [
      "arn:aws:iam::*:role/aws-service-role/wafv2.amazonaws.com/AWSServiceRoleForWAFV2Logging"
    ]
  }
}
